Fix overlapping issues on smaller devices

--- a/assets/css/_style.styl
+++ b/assets/css/_style.styl
@@ -1311,7 +1311,7 @@ fieldset[disabled] .btn-primary.active
     padding-left 25px
 
   .contact .quicklinks
-    margin 0 auto 0 14%
+    margin 0 auto 0 5%
     width 100%
   .contact .quicklinks li
     display inline-block
